eslint, prettier and husky added to ensure code quality

--- a/package.json
+++ b/package.json
@@ -6,28 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "eslint": "eslint . --ext=.ts,.tsx",
+    "format:write": "prettier --write \"**/*.{ts,tsx,mdx,js,jsx,json,md,html}\" --cache",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx,js,jsx,json,md,html}\" --cache",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
     "lucide-react": "^0.272.0",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "autoprefixer": "^10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "^8.48.0",
     "eslint-config-next": "^13.4.19",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.29",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.2.2",
+    "husky": "^8.0.0"
   }
 }
